--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,11 @@
   "author": "krishna bokefod",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.2.1"
+    "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
+    "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^8.22.0",
+    "validator": "^13.15.26"
   }
 }
