--- a/backend/package.json
+++ b/backend/package.json
@@ -12,12 +12,14 @@
     "@aws-sdk/client-ses": "^3.967.0",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
+    "crypto": "^1.0.1",
     "date-fn": "^0.0.2",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.22.0",
     "node-cron": "^4.2.1",
+    "socket.io": "^4.8.3",
     "validator": "^13.15.26"
   }
 }
